--- a/style.css
+++ b/style.css
@@ -90,15 +90,32 @@ button:hover {
 }
 
 article {
+    max-width: 250px;
     border: 1px solid #B4FF7A;
     border-radius: 8px;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
 }
 
+article section {
+    margin-top: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-top: 1rem;
+}
 
 article img {
     margin-top: -2.6rem;
     width: 230px;
+}
+
+article button {
+    padding: .1rem 1rem;
+    font-weight: 400;
+    font-size: 1rem;
+    letter-spacing: .1em;
 }
 
 
@@ -150,6 +167,24 @@ article img {
     opacity: 0;
     animation: pop 1200ms ease-in forwards;
     transform-origin: right;
+}
+
+/* OVERLAY */
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: hsla(0, 0%, 10%, 0.6);
+    display: grid;
+    place-content: center;
+}
+
+.overlay article {
+    max-width: 400px;
+    max-height: 300px;
+    padding: 1rem;
+    background-color: #191919;
 }
 
 /* HIDE */
