--- a/style.css
+++ b/style.css
@@ -17,17 +17,25 @@ body {
     background: linear-gradient( #191919,  #242424);
 }
 
-h1, h3 {
+h1, h2, h3, h4 {
     font-family: 'Cairo', sans-serif;
     color: #B4FF7A;
     font-weight: 400;
-    text-transform: uppercase;
     letter-spacing: .2em;
+}
+
+h1, h2, h3 {
+    text-transform: uppercase;
 }
 
 h1 {
     font-size: 6rem;
 }
+
+h4 {
+    font-size: 1.6rem;
+}
+
 
 p, li {
     font-family: 'Lato', sans-serif;
@@ -47,6 +55,8 @@ header {
     height: 4rem;
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    background-image: linear-gradient(#191919,  #24242400);
 }
 
 header * {
@@ -77,7 +87,8 @@ button {
     border: none;
     padding: .4rem 1.6rem;
     border-radius: 8px;
-    background-color: #B4FF7A;
+    /* background-color: #B4FF7A; */
+    background-image: linear-gradient(45deg, #efffded2, #B4FF7A);
     color: #242424;
     font-family: 'Cairo', sans-serif;
     font-weight: 600;
@@ -87,6 +98,20 @@ button {
 
 button:hover {
     scale: 1.1;
+}
+
+article button {
+    padding: .1rem 1rem;
+    font-weight: 400;
+    font-size: 1rem;
+    letter-spacing: .1em;
+    border-radius: 4px;
+}
+
+article button:hover {
+    scale: 1;
+    background-color: #B4FF7A;
+    background-image: none;
 }
 
 article {
@@ -111,13 +136,22 @@ article img {
     width: 230px;
 }
 
-article button {
-    padding: .1rem 1rem;
-    font-weight: 400;
-    font-size: 1rem;
-    letter-spacing: .1em;
+nav {
+    position: relative;
 }
 
+/* CART INDICATOR */
+
+nav .cart-indicator {
+    position: absolute;
+    top: -3px;
+    right: 5px;
+    opacity: 0;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background-color: white;
+}
 
 /* HERO */
 
@@ -127,6 +161,7 @@ article button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 6rem;
 }
 
 .hero h1 {
@@ -181,11 +216,47 @@ article button {
 }
 
 .overlay article {
-    max-width: 400px;
-    max-height: 300px;
     padding: 1rem;
     background-color: #191919;
+    align-items: center;
 }
+
+.overlay article section {
+    flex-direction: row;
+    align-items: center;
+}
+
+.overlay ul {
+    text-align: center;
+}
+
+.plus, .minus {
+    background-color: transparent;
+    background-image: none;
+    color: #B4FF7A;
+    font-size: 2rem;
+}
+
+.plus:hover, .minus:hover {
+    background-color: transparent;
+}
+
+/* PRODUCTS IN CART */
+
+.products-in-cart {
+    position: fixed;
+    top: 4rem;
+    right: 1rem;
+    background-color: #191919;
+}
+
+.products-in-cart section {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 0;
+}
+
 
 /* HIDE */
 
@@ -194,6 +265,10 @@ article button {
 }
 
 /* KEYFRAMES */
+
+.pop {
+    animation: pop 600ms ease-in 1;
+}
 
 @keyframes pop {
     0%  {
