--- a/style.css
+++ b/style.css
@@ -155,15 +155,17 @@ nav .cart-indicator {
 
 .hero {
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 6rem;
+    padding-top: 6rem;
 }
 
 .hero h1 {
     margin-top: -2rem;
     margin-bottom: 2rem;
+    padding: 0 1rem;
     opacity: 0;
     text-align: center;
     animation: fadeIn 1s ease-in 2s forwards;
@@ -286,5 +288,14 @@ nav .cart-indicator {
         opacity: 0;
     } to {
         opacity: 1;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    h1 {
+        font-size: 2.5rem;
+    }
+    h3 {
+        font-size: 1rem;
     }
 }
